webadmin: fix findbugs warning
- Fix findbugs warning about using new Integer(String)
  instead of Integer.valueOf(String).

Change-Id: I999e8a85081f2ef9ef975cbff4ce6669dac7f2ec
Signed-off-by: Alexander Wels <awels@redhat.com>